Fixes issue where users couldn't navigate slider on mobile

--- a/style.css
+++ b/style.css
@@ -10059,7 +10059,7 @@ h2.entry-title.home-hero-title {
     top: initial !important;
     margin-top: 0;
     transform: translate(0,50%);
-    z-index: 9;
+    z-index: 1;
     bottom: 46%;
     padding: 0 2rem;
 }
